wacom: Fix freeing buffer in OLED helper

We can't free "", buffer needs to be set by the command-line options,
but we never check that it got set.

From coverity:
gnome-settings-daemon-3.14.4/plugins/wacom/gsd-wacom-oled-helper.c:415: incorrect_free: "g_free" frees incorrect pointer "buffer".

https://bugzilla.gnome.org/show_bug.cgi?id=749882